--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "eventsource-parser": "^3.0.1",
+    "marked": "^15.0.8",
     "vue": "^3.5.13"
   },
   "devDependencies": {
