--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "marked": "^15.0.8",
     "vue": "^3.5.13"
   },
   "devDependencies": {
